--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
-1. Ajouter le code pour tester si les shaders sont supportes
-2. Implementer le code pour un vertex shader pour 'comment'
-3. Lire le pdf
-4. Rajouter effet de pixelisation dans le jeu Puzzle pour les switch gauche et droite et transformer le projet en un unique .vscode
-5. Piquer la div blanche de bas dans l'exemple des shaders pour montrer les options du jeu puzzle
-6. Utiliser clock.getElapsedTime
-7. Nettoyer le code
+1. Faire un effet flashlight
+    - page 42 et plus!
+    - Apprendre la notion d'uniform
+    - Etant donnee la pos de la souris rendre transparent les pixels d'une texture! (creer un test five)
+    -(gl_FragCoord) Utiliser l'equation d'un cercle relative a la souris comme les pixels sont en 2d 
+    si la position est inferieure au rayon fixe alors on ignore
+    - Implementer cet effet dans le puzzle avec une animation consistant a faire agrandir
+     le cercle pour faire voir l'image en entier
